--- a/order-dev.yml
+++ b/order-dev.yml
@@ -7,7 +7,5 @@ spring:
     url: jdbc:mysql://localhost:3306/learning?characterEncoding=utf-8&useSSL=false
     username: root
     password: root
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8080/eureka/
+env:
+  test
