--- a/product-dev.yml
+++ b/product-dev.yml
@@ -7,7 +7,5 @@ spring:
     password: root
 server:
   port: 8081
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8080/eureka/
+env:
+  prod
